<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    >
  <data>
    <import type="android.view.View"/>
    <variable
        name="viewModel"
        type="com.truethat.android.viewmodel.OnBoardingSignUpStageViewModel"
        />
  </data>
  <android.support.constraint.ConstraintLayout
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:clickable="true"
      android:focusableInTouchMode="true"
      tools:context=".view.fragment.OnBoardingSignUpStageFragment"
      >

    <com.truethat.android.view.custom.StyledTextView
        android:id="@+id/newAccountText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:labelFor="@+id/nameEditText"
        android:text="@string/create_your_account"
        android:textAlignment="center"
        android:textColor="@color/primary"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/nameLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="spread"
        />

    <android.support.constraint.ConstraintLayout
        android:id="@+id/nameLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/onBoarding_signUp_loadingImage"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/newAccountText"
        >
      <com.truethat.android.view.custom.StyledTextView
          android:id="@+id/nameText"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:labelFor="@+id/nameEditText"
          android:text="@string/name"
          android:textAlignment="center"
          android:textColor="@color/primary"
          android:textSize="20sp"
          app:layout_constraintBottom_toTopOf="@+id/nameEditText"
          app:layout_constraintEnd_toEndOf="parent"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintTop_toTopOf="parent"
          />

      <com.truethat.android.view.custom.StyledEditText
          android:id="@+id/nameEditText"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:backgroundTint="@{viewModel.mNameEditBackgroundTintColor}"
          android:cursorVisible="@{viewModel.mNameEditCursorVisibility}"
          android:ems="10"
          android:hint="@string/john_doe"
          android:imeOptions="actionDone"
          android:inputType="@{viewModel.mNameEditInputType}"
          android:textColor="@{viewModel.mNameTextColor}"
          android:textColorHint="@color/hint"
          android:textCursorDrawable="@drawable/cursor_primary"
          app:layout_constraintBottom_toTopOf="@+id/warningText"
          app:layout_constraintEnd_toEndOf="parent"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintTop_toBottomOf="@id/nameText"
          />

      <com.truethat.android.view.custom.StyledTextView
          android:id="@+id/warningText"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_marginTop="5dp"
          android:text="@string/name_edit_warning_text"
          android:textAlignment="center"
          android:textColor="@color/error"
          android:textSize="15sp"
          android:visibility="@{viewModel.mWarningTextVisibility ? View.VISIBLE : View.INVISIBLE}"
          app:layout_constraintBottom_toBottomOf="parent"
          app:layout_constraintEnd_toEndOf="parent"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintTop_toBottomOf="@id/nameEditText"
          />
    </android.support.constraint.ConstraintLayout>

    <ImageView
        android:id="@+id/onBoarding_signUp_loadingImage"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:contentDescription="@string/image_content_description"
        android:scaleType="centerInside"
        android:visibility="@{viewModel.mLoadingImageVisibility ? View.VISIBLE : View.INVISIBLE}"
        app:layout_constraintBottom_toTopOf="@+id/onBoarding_signUpButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/nameLayout"
        app:srcCompat="@drawable/anim_loading"
        />

    <com.truethat.android.view.custom.StyledButton
        android:id="@+id/onBoarding_signUpButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingEnd="24dp"
        android:paddingStart="24dp"
        android:text="@string/sign_up"
        android:textAlignment="center"
        android:textColor="@color/light"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/onBoarding_signUp_loadingImage"
        />

  </android.support.constraint.ConstraintLayout>
</layout>