<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    >
  <data>
    <variable
        name="viewModel"
        type="com.truethat.android.viewmodel.BaseViewModel"
        />
  </data>
  <android.support.constraint.ConstraintLayout
      android:id="@+id/cameraFragment"
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      tools:context=".view.fragment.CameraFragment"
      >

    <com.truethat.android.view.custom.FullscreenTextureView
        android:id="@+id/cameraPreview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

  </android.support.constraint.ConstraintLayout>
</layout>
