...
        android:layout_width="260dp"
        android:layout_height="wrap_content"
        android:text="@string/on_boarding_hi_message"
        android:textAlignment="center"
        android:textColor="@color/primary"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/onBoarding_hiButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/onBoarding_hiTitle"
        />

    <com.truethat.android.view.custom.StyledButton
...
